tests/agl/rejections/type/parametricity_print.agl
def show[T](x: T) -> unit = print(x)
show(42)
